Add entry to run unit-test as debug in intellij